--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ langchain==0.1.12
 langchain-openai==0.0.8
 pandas==2.2.1
 python-dotenv==1.0.1
-gradio==4.19.2
+gradio==4.44.1
 chromadb==0.4.24
 tiktoken==0.6.0 
+colorama==0.4.6 
