--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
+httpx-sse==0.4.0
 huggingface-hub==0.29.3
 humanfriendly==10.0
 idna==3.10
@@ -51,12 +52,12 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 kiwisolver==1.4.8
 kubernetes==32.0.1
-langchain==0.1.12
-langchain-community==0.0.38
-langchain-core==0.1.53
-langchain-openai==0.0.8
-langchain-text-splitters==0.0.2
-langsmith==0.1.147
+langchain==0.3.20
+langchain-community==0.3.19
+langchain-core==0.3.45
+langchain-openai==0.3.8
+langchain-text-splitters==0.3.6
+langsmith==0.3.15
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.26.1
@@ -93,6 +94,7 @@ pulsar-client==3.6.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.10.6
+pydantic-settings==2.8.1
 pydantic_core==2.27.2
 pydub==0.25.1
 Pygments==2.19.1
@@ -120,7 +122,7 @@ SQLAlchemy==2.0.39
 starlette==0.46.1
 sympy==1.13.3
 tenacity==8.5.0
-tiktoken==0.6.0
+tiktoken==0.9.0
 tokenizers==0.21.1
 tomlkit==0.12.0
 tqdm==4.67.1
@@ -137,3 +139,4 @@ websockets==12.0
 wrapt==1.17.2
 yarl==1.18.3
 zipp==3.21.0
+zstandard==0.23.0
